--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1113,7 +1113,7 @@ bnails */
 				width: 100%;
 				height: 100%;
 				background-repeat: no-repeat;
-				background-size: cover;
+				background-size: contain;
 				opacity: 0;
 			}
 
