--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -859,7 +859,8 @@ bnails */
 		#thumbnails article {
 			position: relative;
 			width: 100%;
-			background: #101010;
+			/*background: #101010;*/
+			margin-bottom: 10px;
 			outline: 0;
 		}
 
