--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -860,7 +860,7 @@ bnails */
 			position: relative;
 			width: 100%;
 			/*background: #101010;*/
-			margin-bottom: 10px;
+			/*margin-bottom: 10px;*/
 			outline: 0;
 		}
 
