--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -873,6 +873,7 @@ bnails */
 			}
 
 				#thumbnails article .thumbnail img {
+					margin-bottom: 10px;
 					display: block;
 					width: 100%;
 				}
